force-app/main/default/objects/Request_Tada_History__c/Request_Tada_History__c.object-meta.xml
<CustomObject>
    <description>For historys List and  cool off Request User ID via  EIP-TADA</description>
    <label>Request Tada History</label>
    <nameField>
        <label>Request History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Request Tada Historys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>