force-app/main/default/objects/Request_Tada_History__c/fields/Active_Email__c.field-meta.xml
<CustomField>
    <fullName>Active_Email__c</fullName>
    <label>Active Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>