force-app/main/default/objects/Request_Tada_History__c/fields/Email_History__c.field-meta.xml
<CustomField>
    <fullName>Email_History__c</fullName>
    <label>Email History</label>
    <length>255</length>
    <type>Text</type>
</CustomField>