force-app/main/default/objects/Request_Tada_History__c/fields/Finish_Date__c.field-meta.xml
<CustomField>
    <fullName>Finish_Date__c</fullName>
    <formula>Request_Date__c + 5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Finish Date</label>
    <type>Date</type>
</CustomField>