force-app/main/default/objects/Request_Tada_History__c/fields/Type_Request__c.field-meta.xml
<CustomField>
    <fullName>Type_Request__c</fullName>
    <label>Type Request</label>
    <length>255</length>
    <type>Text</type>
</CustomField>